--- a/source/references.bib
+++ b/source/references.bib
@@ -370,3 +370,39 @@ The resulting flows are given by Allen-Cahn and Cahn-Hilliard type dynamics coup
 	date = {1998-10-08},
 	file = {Full Text PDF:/home/tim/Zotero/storage/2FLLJTNA/Bossen und Heckbert - 1998 - A Pliant Method for Anisotropic Mesh Generation.pdf:application/pdf}
 }
+
+@book{bendsoe_topology_2004,
+	location = {Berlin Heidelberg},
+	edition = {2},
+	title = {Topology Optimization: Theory, Methods, and Applications},
+	isbn = {978-3-540-42992-0},
+	url = {https://www.springer.com/de/book/9783540429920},
+	shorttitle = {Topology Optimization},
+	abstract = {The topology optimization method solves the basic engineering problem of distributing a limited amount of material in a design space. The first edition of this book has become the standard text on optimal design which is concerned with the optimization of structural topology, shape and material. This edition has been substantially revised and updated to reflect progress made in modelling and computational procedures. It also encompasses a comprehensive and unified description of the state-of-the-art of the so-called material distribution method, based on the use of mathematical programming and finite elements. Applications treated include not only structures but also {MEMS} and materials.},
+	publisher = {Springer-Verlag},
+	author = {Bendsoe, Martin Philip and Sigmund, Ole},
+	urldate = {2019-11-07},
+	date = {2004},
+	langid = {english},
+	doi = {10.1007/978-3-662-05086-6},
+	file = {Bendsoe und Sigmund - 2004 - Topology Optimization Theory, Methods, and Applic.pdf:/home/tim/Zotero/storage/7P9BXIJW/Bendsoe und Sigmund - 2004 - Topology Optimization Theory, Methods, and Applic.pdf:application/pdf;Snapshot:/home/tim/Zotero/storage/KK6ZTV6S/9783540429920.html:text/html}
+}
+
+@article{blank_primal-dual_2013,
+	title = {Primal-dual active set methods for Allen–Cahn variational inequalities with nonlocal constraints},
+	volume = {29},
+	rights = {Copyright © 2012 Wiley Periodicals, Inc.},
+	issn = {1098-2426},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/num.21742},
+	doi = {10.1002/num.21742},
+	abstract = {We propose and analyze a primal-dual active set method for discretized versions of the local and nonlocal Allen–Cahn variational inequalities. An existence result for the nonlocal variational inequality is shown in a formulation involving Lagrange multipliers for local and nonlocal constraints. Local convergence of the discrete method is shown by interpreting the approach as a semismooth Newton method. Properties of the method are discussed and several numerical simulations demonstrate its efficiency. © 2012 Wiley Periodicals, Inc. Numer Methods Partial Differential Eq, 2013},
+	pages = {999--1030},
+	number = {3},
+	journaltitle = {Numerical Methods for Partial Differential Equations},
+	author = {Blank, Luise and Garcke, Harald and Sarbu, Lavinia and Styles, Vanessa},
+	urldate = {2019-11-08},
+	date = {2013},
+	langid = {english},
+	keywords = {Allen–Cahn variational inequality, finite element approximation, nonlocal constraints, primal-dual active set methods, semismooth Newton methods},
+	file = {Snapshot:/home/tim/Zotero/storage/N7GTEA5X/num.html:text/html}
+}
