--- a/source/references.bib
+++ b/source/references.bib
@@ -406,3 +406,27 @@ The resulting flows are given by Allen-Cahn and Cahn-Hilliard type dynamics coup
 	keywords = {Allen–Cahn variational inequality, finite element approximation, nonlocal constraints, primal-dual active set methods, semismooth Newton methods},
 	file = {Snapshot:/home/tim/Zotero/storage/N7GTEA5X/num.html:text/html}
 }
+
+@article{ebeling-rump_topology_2019,
+	title = {Topology optimization subject to additive manufacturing constraints},
+	journaltitle = {{WIAS} Preprints},
+	author = {Ebeling-Rump, Moritz and Hömberg, Dietmar and Lasarzik, Robert and Petzold, Thomas},
+	date = {2019-10}
+}
+
+@inproceedings{carr_reconstruction_2001-1,
+	location = {New York, {NY}, {USA}},
+	title = {Reconstruction and Representation of 3D Objects with Radial Basis Functions},
+	isbn = {978-1-58113-374-5},
+	url = {http://doi.acm.org/10.1145/383259.383266},
+	doi = {10.1145/383259.383266},
+	series = {{SIGGRAPH} '01},
+	abstract = {We use polyharmonic Radial Basis Functions ({RBFs}) to reconstruct smooth, manifold surfaces from point-cloud data and to repair incomplete meshes. An object's surface is defined implicitly as the zero set of an {RBF} fitted to the given surface data. Fast methods for fitting and evaluating {RBFs} allow us to model large data sets, consisting of millions of surface points, by a single {RBF} — previously an impossible task. A greedy algorithm in the fitting process reduces the number of {RBF} centers required to represent a surface and results in significant compression and further computational advantages. The energy-minimisation characterisation of polyharmonic splines result in a “smoothest” interpolant. This scale-independent characterisation is well-suited to reconstructing surfaces from non-uniformly sampled data. Holes are smoothly filled and surfaces smoothly extrapolated. We use a non-interpolating approximation when the data is noisy. The functional representation is in effect a solid model, which means that gradients and surface normals can be determined analytically. This helps generate uniform meshes and we show that the {RBF} representation has advantages for mesh simplification and remeshing applications. Results are presented for real-world rangefinder data.},
+	pages = {67--76},
+	booktitle = {Proceedings of the 28th Annual Conference on Computer Graphics and Interactive Techniques},
+	publisher = {{ACM}},
+	author = {Carr, J. C. and Beatson, R. K. and Cherrie, J. B. and Mitchell, T. J. and Fright, W. R. and {McCallum}, B. C. and Evans, T. R.},
+	urldate = {2019-11-11},
+	date = {2001},
+	keywords = {geometry compression, mesh repair, point-cloud surfacing, Radial Basis Function, {RBF}, solid modeling, surface reconstruction, variational implicit surfaces}
+}
