--- a/style/preamble.tex
+++ b/style/preamble.tex
@@ -131,6 +131,8 @@
 \renewcommand{\vec}[1]{\mathbf{#1}}
 \renewcommand{\hat}[1]{\oldhat{\mathbf{#1}}}
 
+
+\usepackage{subfig}
 % turn on page numbering
 
 % Allow for long captions and float captions on opposite page of figures
