--- a/source/references.bib
+++ b/source/references.bib
@@ -331,6 +331,7 @@ The resulting flows are given by Allen-Cahn and Cahn-Hilliard type dynamics coup
 @book{wendland_scattered_2005,
 	title = {Scattered Data Approximation},
 	volume = {17},
+	publisher = {Cambridge University Press},
 	author = {Wendland, Holger},
 	date = {2005-01-01},
 	file = {Scattered-Data-Approximation.pdf:/home/tim/Zotero/storage/CMB8SWIW/Scattered-Data-Approximation.pdf:application/pdf}
@@ -429,4 +430,17 @@ The resulting flows are given by Allen-Cahn and Cahn-Hilliard type dynamics coup
 	urldate = {2019-11-11},
 	date = {2001},
 	keywords = {geometry compression, mesh repair, point-cloud surfacing, Radial Basis Function, {RBF}, solid modeling, surface reconstruction, variational implicit surfaces}
+}
+
+@inproceedings{muller_visualization_1999,
+	location = {Washington, {DC}, {USA}},
+	title = {Visualization of Implicit Surfaces Using Adaptive Tetrahedrizations},
+	isbn = {978-0-7695-0505-3},
+	url = {http://dl.acm.org/citation.cfm?id=647367.723598},
+	pages = {243--250},
+	booktitle = {Dagstuhl '97, Scientific Visualization},
+	publisher = {{IEEE} Computer Society},
+	author = {Müller, Heinrich and Wehle, Michael},
+	urldate = {2019-11-12},
+	date = {1999}
 }
