--- a/source/references.bib
+++ b/source/references.bib
@@ -444,3 +444,16 @@ The resulting flows are given by Allen-Cahn and Cahn-Hilliard type dynamics coup
 	urldate = {2019-11-12},
 	date = {1999}
 }
+
+@software{tom_pollard_template_2016,
+	title = {Template for writing a {PhD} thesis in Markdown},
+	url = {https://zenodo.org/record/58490},
+	abstract = {Template for writing a {PhD} thesis in Markdown, a super-friendly plain text format. Using Pandoc, the Markdown can be easily converted to popular formats such as {LATEX}, {PDF}, {MS} Word, {HTML}, etc.},
+	publisher = {Zenodo},
+	author = {Tom Pollard and Marvin Reimer and David San and Arco Mul and Matthew Gwynfryn Thomas and Jakub Nowosad and Dennis Weissmann and W. Caleb {McDaniel}},
+	urldate = {2019-11-14},
+	date = {2016-07-22},
+	doi = {10.5281/zenodo.58490},
+	keywords = {Markdown, {PhD}, Template, Thesis},
+	file = {Zenodo Snapshot:/home/tim/Zotero/storage/HD7IGFI2/58490.html:text/html}
+}
